tests/invalid/Type_Invalid_6.whiley
type Contractive is Contractive | Contractive | Contractive